--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>This is my page!</h1>
+    <img src="https://avatars.githubusercontent.com/u/85887389?v=4">
     Hello there, awesome person!
   </body>
 </html>
