Added unordered list
added unordered list of websites

--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <h1>This is my page!</h1>
     <img src="https://avatars.githubusercontent.com/u/85887389?v=4">
     Hello there, awesome person!
+    
+    <ul>
+      <li src="https://xkcd.com/">xkcd</li>  
+      <li src="https://www.google.com/">Google</li>
+      <li src="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</li>
+    </ul>
   </body>
 </html>
