Added links to unordered list
added links to unordered list

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     Hello there, awesome person!
     
     <ul>
-      <li src="https://xkcd.com/">xkcd</li>  
-      <li src="https://www.google.com/">Google</li>
-      <li src="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</li>
+      <li><a href="https://xkcd.com/">xkcd</a></li>  
+      <li><a href="https://www.google.com/">Google</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a></li>
     </ul>
   </body>
 </html>
