added CSS stylesheet
Added CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Title of Page</title>
   </head>
   <body>
+    <link rel="stylesheet" href="style.css">
     <h1>This is my page!</h1>
     <img src="https://avatars.githubusercontent.com/u/85887389?v=4">
     Hello there, awesome person!
